# MergerMonger-Public

./: README.md  pyproject.toml  requirements.txt
MergerMonger-Public/: MergerMonger.py  README.md  classify_SDSS.py
MergerMonger-Public/analysis/: Fig01_plot_properties_SDSS_predictors.py  Fig04_mass_comparison.py  Fig11_property_comparison_merger_samples.py  Fig14_prior_posterior_plot.py  Fig16_17_19_20_slope_of_fmerg_binned.py  Fig1_plot_properties_SDSS_predictors.py  Fig21_no_mass_binning.py  fig11.py  fig_16_17_19_20.py  fig_18.py  lookup_galaxy_classify_and_diagnostic_plotting.py
MergerMonger-Public/tests/: test.py
MergerMonger-Public/utils/: util_LDA.py  util_SDSS.py  util_smelter.py
imaging/: README.md  default.param  sex.xml
tables/: README.md
tables/simulation_classifications/: LDA_merged_fg1_m13.txt  LDA_merged_fg3_m10.txt  LDA_merged_fg3_m12.txt  LDA_merged_fg3_m13.txt  LDA_merged_fg3_m15.txt  LDA_merged_major_merger.txt  LDA_merged_major_merger_early.txt  LDA_merged_major_merger_late.txt  LDA_merged_major_merger_postc.txt  LDA_merged_major_merger_prec.txt  LDA_merged_minor_merger.txt  LDA_merged_minor_merger_early.txt  LDA_merged_minor_merger_late.txt  LDA_merged_minor_merger_postc.txt  LDA_merged_minor_merger_prec.txt
