[tool.poetry]
name = "mergermonger-public"
version = "0.1.0"
description = "Publicly available merger catalogs and tools to identify mergers from imaging surveys, specifically Sloan Digital Sky Survey."
authors = ["beckynevin <beckynevin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mergermonger_public"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
